--- a/python_basics/python_basics.ipynb
+++ b/python_basics/python_basics.ipynb
@@ -163,6 +163,45 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "решение"
+      ],
+      "metadata": {
+        "id": "_pJskhc5GaPZ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "year = int(input(\"Введите первое число: \"))\n",
+        "b = 4\n",
+        "remainder = year % b\n",
+        "if remainder == 0:\n",
+        "  print('Високосный год')\n",
+        "else :\n",
+        "  print('Обычный год')\n"
+      ],
+      "metadata": {
+        "id": "r10n6jXIGddJ",
+        "outputId": "94db17df-af9f-4d26-8f04-bfdd1f31ace9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Введите первое число: 2020\n",
+            "Високосный год\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "rgr2ZXozxbxt"
       },
