--- a/python_basics/python_basics.ipynb
+++ b/python_basics/python_basics.ipynb
@@ -95,8 +95,6 @@
       "source": [
         "phrase_1 = '640Кб должно хватить для любых задач. Билл Гейтс (по легенде)'\n",
         "phrase_2 = 'Насколько проще было бы писать программы, если бы не заказчики'\n",
-        "print(len(phrase_1))\n",
-        "print(len(phrase_2))\n",
         "k=len(phrase_1)\n",
         "t=len(phrase_2)\n",
         "if k > t :\n",
@@ -111,16 +109,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "soQyXqCoxkN4",
-        "outputId": "7aa2cb66-e7d9-4e1f-918e-d8c871a599ba"
+        "outputId": "90a4c179-85a1-4d2a-f441-a647546976e3"
       },
-      "execution_count": 17,
+      "execution_count": 46,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "61\n",
-            "62\n",
             "Фраза 2 длиннее фразы 1\n"
           ]
         }
@@ -173,7 +169,7 @@
     {
       "cell_type": "code",
       "source": [
-        "year = int(input(\"Введите первое число: \"))\n",
+        "year = int(input())\n",
         "b = 4\n",
         "remainder = year % b\n",
         "if remainder == 0:\n",
@@ -182,19 +178,19 @@
         "  print('Обычный год')\n"
       ],
       "metadata": {
-        "id": "r10n6jXIGddJ",
-        "outputId": "94db17df-af9f-4d26-8f04-bfdd1f31ace9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "r10n6jXIGddJ",
+        "outputId": "0de86459-27d5-4c0f-f601-e7d19370dbf9"
       },
-      "execution_count": 45,
+      "execution_count": 48,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Введите первое число: 2020\n",
+            "2020\n",
             "Високосный год\n"
           ]
         }
@@ -241,6 +237,76 @@
         "```\n",
         "Результат:  \n",
         "`Ваш знак зодиака: Скорпион`\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "решение"
+      ],
+      "metadata": {
+        "id": "l6FcToS7Oc8U"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "date=int(input('Введите день:'))\n",
+        "month=(input('Введите месяц:'))\n",
+        "if (date>=21 and date<=31 and month=='март') or (month=='апрель' and date>=1 and date<=19):\n",
+        "  print('Овен')\n",
+        "\n",
+        "if (date>=20 and date<=30 and month=='апрель') or( month=='май' and date>=1 and date<=20):\n",
+        "  print ('Знак зодиака:Телец')\n",
+        "\n",
+        "if (date>=21 and date<=31 and month=='май') or( month=='июнь' and date>=1 and date<=21):\n",
+        "  print('Знак зодиака:Близнецы')\n",
+        "\n",
+        "if (date>=22 and date<=30 and month=='июнь') or( month=='июль' and date>=1 and date<=22):\n",
+        "  print('Знак зодиака:Рак')\n",
+        "\n",
+        "if (date>=23 and date<=31 and month=='июль') or( month=='август' and date>=1 and date<=22):\n",
+        "  print('Знак зодиака:Лев')\n",
+        "\n",
+        "if (date>=23 and date<=31 and month=='август') or( month=='сентябрь' and date>=1 and date<=22):\n",
+        "  print('Знак зодиака:Дева')\n",
+        "\n",
+        "if (date>=23 and date<=30 and month=='сентябрь') or( month=='октябрь' and date>=1 and date<=23):\n",
+        "  print('Знак зодиака:Весы')\n",
+        "\n",
+        "if (date>=24 and date<=31 and month=='октябрь') or( month=='ноябрь' and date>=1 and date<=22):\n",
+        "  print('Знак зодиака:Скорпион')\n",
+        "\n",
+        "if (date>=23 and date<=30 and month=='ноябрь') or( month=='декабрь' and date>=1 and date<=21):\n",
+        "  print('Знак зодиака:Стрелец')\n",
+        "\n",
+        "if (date>=22 and date<=31 and month=='декабрь') or( month=='январь' and date>=1 and date<=20):\n",
+        "  print('Знак зодиака:Козерог')\n",
+        "\n",
+        "if (date>=21 and date<=31 and month=='январь') or( month=='февраль' and date>=1 and date<=18):\n",
+        "  print('Знак зодиака:Водолей')\n",
+        "\n",
+        "if (date>=19 and date<=29 and month=='февраль') or( month=='март' and date>=1 and date<=20):\n",
+        "  print('Знак зодиака:Рыбы')"
+      ],
+      "metadata": {
+        "id": "J1T_xzWaOhP0",
+        "outputId": "6605d6c7-c95c-46b0-bc9a-be79933ce798",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 58,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Введите день:28\n",
+            "Введите месяц:сентябрь\n",
+            "Знак зодиака:Весы\n"
+          ]
+        }
       ]
     },
     {
