--- a/python_basics/python_basics.ipynb
+++ b/python_basics/python_basics.ipynb
@@ -290,11 +290,11 @@
         "  print('Знак зодиака:Рыбы')"
       ],
       "metadata": {
-        "id": "J1T_xzWaOhP0",
-        "outputId": "6605d6c7-c95c-46b0-bc9a-be79933ce798",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "J1T_xzWaOhP0",
+        "outputId": "6605d6c7-c95c-46b0-bc9a-be79933ce798"
       },
       "execution_count": 58,
       "outputs": [
@@ -352,6 +352,53 @@
         "```\n",
         "Результат:  \n",
         "`Упаковка для лыж`"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "решение"
+      ],
+      "metadata": {
+        "id": "Fwe0NeyyS7iL"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "width=int(input('Введите ширину:'))\n",
+        "length=int(input('Введите длину:'))\n",
+        "height=int(input('Введите высоту:'))\n",
+        "if (width<=15 and length<=15 and height<=15):\n",
+        "  print ('Коробка №1')\n",
+        "else :\n",
+        "  if (width>200 or length>200 or height>200):\n",
+        "     print ('Упаковка для лыж')\n",
+        "  else :\n",
+        "    if (width>15 and width<50)  or (length>15 and length<50) or (height>15 and height<50):\n",
+        "      print ('Коробка №2')\n",
+        "    else :\n",
+        "      print ('Коробка №3')"
+      ],
+      "metadata": {
+        "id": "pyrYqkreS9ah",
+        "outputId": "574cc215-2b13-45c2-93ca-45e0d57efd3e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 63,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Введите ширину:15\n",
+            "Введите длину:15\n",
+            "Введите высоту:51\n",
+            "Коробка №3\n"
+          ]
+        }
       ]
     },
     {
